--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "vite-react-typescript-starter",
+  "name": "datetimeselectors",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://azrim9.github.io/date-time-selectors/",
   "type": "module",
   "scripts": {
     "dev": "vite",
