--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "datetimeselectors",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://azrim9.github.io/date-time-selectors/",
+  "homepage": "https://azrim9.github.io",
   "type": "module",
   "scripts": {
     "dev": "vite",
